--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <head>
 
     <!--TITLE-->
-    <title>LEVIOOSA RESUME</title>
+    <title>RESUME
+    </title>
 
     <!--ICON-->
     <link rel="shortcut icon" href="j.jpg">
